# Parallels-for-Susu

./: .gitignore  CMakeLists.txt
lab1/: CMakeLists.txt  lab1.md  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  sharedstate.h  threadgeneratestring.cc  threadgeneratestring.h  threadreaderstring.cc  threadreaderstring.h
lab2/: constants.h  lab2.md
lab2/receiver/: CMakeLists.txt  main.cc  receivermapfile.cc  receivermapfile.h  receiverwindow.cc  receiverwindow.h  receiverwindow.ui
lab2/sender/: CMakeLists.txt  main.cc  sendermapfile.cc  sendermapfile.h  senderwindow.cc  senderwindow.h  senderwindow.ui
lab3/: CMakeLists.txt  constants.h  lab3.md
lab3/receiver/: CMakeLists.txt  main.cc
lab3/sender/: CMakeLists.txt  main.cc
lab4/: CMakeLists.txt
lab4/hello/: CMakeLists.txt  main.c
lab4/hiden/: CMakeLists.txt  main.c
lab4/iam/: CMakeLists.txt  main.c
lab4/reduction/: CMakeLists.txt  main.c
lab5/: CMakeLists.txt
lab5/baton/: CMakeLists.txt  main.c
lab5/first-second/: CMakeLists.txt  main.c
lab5/iam/: CMakeLists.txt  main.c
lab5/send/: CMakeLists.txt  main.c
